--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -6,3 +6,14 @@ body {
   background-color: var(--dark-bg-color);
   color: #ffffff;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
