almost done with search and feed layouts, need to complete styles

--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -17,3 +17,8 @@ body {
   scrollbar-width: none; /* For Firefox */
   -ms-overflow-style: none; /* For Internet Explorer and Edge */
 }
+
+h2,
+h3 {
+  font-family: 'Nasalization', sans-serif;
+}
