--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -10,6 +10,14 @@
   background-position: center;
 }
 
+.reg-form {
+  height: 100vh;
+  background-color: rgba(255, 255, 255, 0.5);
+  background-image: url('../assets/images/login-form-bg.png');
+  background-size: cover;
+  background-position: center;
+}
+
 body {
   background-color: var(--dark-bg-color);
   color: #ffffff;
